# Ageis-AI

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  task.md  task_v1.md  task_v2.md  task_v3.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  approvals.py  auth.py  code_review.py  deploy_agent.py  documentation_agent.py  documents.py  embeddings.py  health.py  incident_agent.py  knowledge_agent.py  memory_api.py  observability.py  planner.py  projects.py  repositories.py  repository_agent.py  repository_analysis.py  tools.py  workflows.py
backend/app/core/: config.py  di.py  execution_plan.py  logging.py  redis.py  security.py  task.py
backend/app/db/: base.py  session.py
backend/app/mcp/: __init__.py  aws.py  docker.py  filesystem.py  github.py  interface.py  kubernetes.py  registry.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: a6b7c8d9e0f1_fix_embedding_dimension.py  e290d78de314_initial_migration.py  f3a1b2c3d4e5_add_memory_tables.py
backend/app/models/: __init__.py  agent.py  document.py  memory.py  project.py  user.py
backend/app/services/: agent_base.py  approval_service.py  capability_registry.py  code_review_agent.py  context_builder.py  deploy_agent.py  document_processor.py  documentation_agent.py  embeddings.py  execution_adapters.py  incident_agent.py  ingestion.py  knowledge_agent.py  llm_service.py  memory.py  observability.py  planner.py  repository_agent.py  repository_analysis.py  repository_data_service.py  repository_intelligence.py  workflow_engine.py
docs/screenshots/: README.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: AuthContext.tsx  api.ts
frontend/src/pages/: Agents.tsx  ApprovalQueue.tsx  Chat.tsx  Dashboard.tsx  Knowledge.tsx  Login.tsx  OpsDashboard.tsx  Projects.tsx  Register.tsx  Repositories.tsx  Settings.tsx
infra/: .env.example  deploy.sh  docker-compose.aws.yml  init-db.sql  nginx.prod.conf  prometheus.yml
k8s/: backend.yaml  config.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ollama.yaml  postgres.yaml  prometheus.yaml  rbac.yaml  redis.yaml  secrets.yaml
